// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-slider slider-picker"
  >
    <div
      class="rc-slider__hue"
    >
      <div
        class="rc-hue-control"
        style="border-radius: 2px;"
      >
        <div
          aria-orientation="horizontal"
          aria-valuemax="359"
          aria-valuemin="0"
          aria-valuenow="250"
          class="rc-hue-control__container"
          role="slider"
          style="border-radius: 2px; background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
          tabindex="0"
        >
          <div
            class="rc-hue-control__pointer"
            style="left: 69.44444444444443%;"
          >
            <div
              class="rc-slider__pointer"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-slider__swatches-wrap"
    >
      <div
        class="rc-slider__swatches"
      >
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            aria-label="Select 80% lightness"
            class="rc-slider__swatch rc-slider__swatch--first"
            role="button"
            style="background: rgb(187, 179, 230);"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            aria-label="Select 65% lightness"
            class="rc-slider__swatch"
            role="button"
            style="background: rgb(136, 121, 210);"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            aria-label="Select 50% lightness"
            class="rc-slider__swatch"
            role="button"
            style="background: rgb(85, 64, 191);"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            aria-label="Select 35% lightness"
            class="rc-slider__swatch"
            role="button"
            style="background: rgb(60, 45, 134);"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider__swatch-wrap"
        >
          <div
            aria-label="Select 20% lightness"
            aria-pressed="true"
            class="rc-slider__swatch rc-slider__swatch--active rc-slider__swatch--last"
            role="button"
            style="background: rgb(34, 26, 77);"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider__clear"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SliderPointer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-slider__pointer"
  />
</DocumentFragment>
`;

exports[`SliderSwatch renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Select 50% lightness"
    class="rc-slider__swatch"
    role="button"
    style="background: rgb(191, 64, 64);"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`SliderSwatches renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-slider__swatches"
  >
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        aria-label="Select 80% lightness"
        class="rc-slider__swatch rc-slider__swatch--first"
        role="button"
        style="background: rgb(230, 179, 179);"
        tabindex="0"
      />
    </div>
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        aria-label="Select 65% lightness"
        class="rc-slider__swatch"
        role="button"
        style="background: rgb(210, 121, 121);"
        tabindex="0"
      />
    </div>
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        aria-label="Select 50% lightness"
        class="rc-slider__swatch"
        role="button"
        style="background: rgb(191, 64, 64);"
        tabindex="0"
      />
    </div>
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        aria-label="Select 35% lightness"
        class="rc-slider__swatch"
        role="button"
        style="background: rgb(134, 45, 45);"
        tabindex="0"
      />
    </div>
    <div
      class="rc-slider__swatch-wrap"
    >
      <div
        aria-label="Select 20% lightness"
        class="rc-slider__swatch rc-slider__swatch--last"
        role="button"
        style="background: rgb(77, 26, 26);"
        tabindex="0"
      />
    </div>
    <div
      class="rc-slider__clear"
    />
  </div>
</DocumentFragment>
`;
